--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -5,6 +5,7 @@
   z-index: 1;
   margin: 10rem auto 0 auto;
   height: 125px;
+  min-width: 330px;
   background-color: white;
   display: flex;
   justify-content: center;
@@ -83,5 +84,11 @@
 @media only screen and (min-width: 971px) {
   .filter {
     display: none;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .search__container {
+    margin: 10rem 0.5rem 0 0.5rem;
   }
 }
