--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -12,9 +12,11 @@
   background-color: #fcfcfc;
   color: maroon;
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-family: var(--ff-primary);
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   gap: 0.5rem;
   box-shadow: 1px 2px 5px 2px rgba(0, 0, 0, 0.1);
 }
